<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.simon.snico_poc.AndroidLocation">

    <TextView
        android:text="@string/pocText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="102dp"
        android:enabled="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lon"
        android:id="@+id/lon"
        android:layout_above="@+id/lat"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="37dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lat"
        android:id="@+id/lat"
        android:layout_marginBottom="35dp"
        android:layout_above="@+id/address"
        android:layout_alignLeft="@+id/lon"
        android:layout_alignStart="@+id/lon"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:id="@+id/address"
        android:layout_marginBottom="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/lat"
        android:layout_alignStart="@+id/lat"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLocation"
        android:id="@+id/btnLocation"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
